# game-of-life

./: .gitignore  README.md
benchmark/: test.go  test_val.txt
c/: CMakeLists.txt  original.c
c/include/: game_logic.h  gui_logic.h  gui_utils.h  nuklear_config.h
c/src/: cli.c  game_logic.c  gui.c  gui_logic.c  gui_utils.c  main.c  nuklear_impl.c  test.c
python/: cli.py  dpg.py  original.py  pyproject.toml  tk.py
python/core/: backend_numpy.py  backend_vanilla.py  engine.py
